# rfsspec

./: Cargo.toml  LICENSE  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: CI.yml
CI/: environment-py38.yml  environment-upload.yml
examples/: script.py  zarr.ipynb
python/rfsspec/: __init__.py  azure.py  gcs.py  http.py  s3.py
src/: io.rs  lib.rs
tests/: conftest.py  test_core.py  test_s3.py
