[package]
name = "rfsspec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rfsspec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
tokio = { version = "1.24", features = ["full"] }
reqwest = "0.11.14"
futures = "0.3.26"
bytes = "1.4.0"