[package]
name = "rfsspec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rfsspec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
tokio = { version = "1.24", features = ["rt", "fs"] }
reqwest = { version = "0.11.14", features = ["stream"] }
futures = "0.3.26"
bytes = "1.4.0"
lazy_static = "1.4.0"
aws-sdk-s3 = "0.24.0"
aws-config = { version = "0.54.1", features = ["rt-tokio"] }
tokio-stream = "0.1.12"
aws-smithy-http = "0.54.3"
aws-sig-auth = "0.54.1"
google_auth = "0.2.1"
urlencoding = "2.1.2"
azure_core = "0.10.0"
azure_storage = "0.10.0"
azure_storage_blobs = "0.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
