[package]
name = "rfsspec"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rfsspec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.2", features = ["extension-module", "macros"] }
tokio = { version = "1.24", features = ["rt", "fs"] }
reqwest = { version = "0.11.14", features = ["stream"] }
futures = "0.3.26"
bytes = "1.4.0"
lazy_static = "1.4.0"
aws-sdk-s3 = "0.26.0"
aws-config = { version = "0.55.0", features = ["rt-tokio"] }
tokio-stream = "0.1.12"
aws-smithy-http = "0.55.0"
aws-sig-auth = "0.55.0"
aws-types = "0.55.0"
google_auth = "0.2.1"
urlencoding = "2.1.2"
azure_core = "0.11.0"
azure_storage = "0.11.0"
azure_storage_blobs = "0.11.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
